# quotalane

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo_transcript.md  integration_contract.md  repo_plan.md  v0.1_tasks.md
examples/: paragraph_summary_large_job.yaml
scripts/: demo.sh
src/quotalane/: __init__.py
src/quotalane/cli/: app.py  commands_inspect.py  commands_resume.py  commands_simulate.py  commands_status.py  render.py
src/quotalane/config/: job_config.py  settings.py
src/quotalane/integrations/: paragraph_summary_contract.py
src/quotalane/models/: batch.py  job.py  lane.py  results.py  work.py
tests/: conftest.py  test_batch_packing_near_safe_target.py  test_batch_packing_never_exceeds_hard_cap.py  test_batch_packing_under_safe_target.py  test_checkpoint_resume_hardening.py  test_checkpoint_resume_multi_lane_job.py  test_checkpoint_save_load.py  test_cli_errors.py  test_cli_simulate.py  test_cooldown_logic.py  test_each_lane_gets_one_batch_per_window.py  test_failed_batch_requeues_to_available_lane.py  test_failed_lane_does_not_block_healthy_lanes.py  test_job_config_validation.py  test_lane_state_transitions.py  test_missing_outputs_requeued.py  test_multi_lane_parallel_dispatch.py  test_no_raw_text_in_logs_or_storage.py  test_parallel_dispatch_respects_per_lane_rpm.py  test_parallel_dispatch_respects_per_lane_tpm.py  test_simulator_estimated_elapsed_time.py  test_simulator_parallel_windows.py  test_sqlite_repositories.py
(+18 files in other folders)
