[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quotalane"
version = "0.1.0"
description = "A multi-key, token-aware LLM workload scheduler with simulator and SQLite checkpoints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "QuotaLane contributors" }]
dependencies = [
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
quotalane = "quotalane.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quotalane"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
